validasi stok aset

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@ uploads/gambar_aset/*
 !uploads/gambar_aset/kamera*
 !uploads/gambar_aset/mobil*
 !uploads/gambar_aset/motor*
+
+SKRIPSI DIKI SUTI PRASETYA BAB I, BAB II , BAB III.docx
+~$RIPSI DIKI SUTI PRASETYA BAB I, BAB II , BAB III.docx
