berita acara dan jabatan, pangkat/golongan pegawai

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ uploads/gambar_pegawai/*
 
 uploads/ijazah_pegawai/*
 uploads/sk_tmt_pegawai/*
+uploads/berita_acara/*
 
 uploads/gambar_aset/*
 !uploads/gambar_aset/kamera*
